# InterProcessCommunicationDev

./: README.md
ZMQ_POC_01/: CMakeLists.txt  README.md  run_app.sh
ZMQ_POC_01/Components/: all_components.cpp  all_components.h  all_sockets.cpp  all_sockets.h
ZMQ_POC_01/Components/CompA/: CMakeLists.txt  CompA.cpp  CompA.h  CompA.proto  CompA_interface.cpp  CompA_interface.h  CompA_messages.cpp  CompA_messages.h
ZMQ_POC_01/Components/CompA/Lib/: mylibA.cpp  mylibA.h
ZMQ_POC_01/Components/CompB/: CMakeLists.txt  CompB.cpp  CompB.h  CompB.proto  CompB_interface.cpp  CompB_interface.h  CompB_messages.cpp  CompB_messages.h
ZMQ_POC_01/Components/CompB/Lib/: mylibB.cpp  mylibB.h
ZMQ_POC_01/Components/CompC/: CMakeLists.txt  CompC.cpp  CompC.h  CompC.proto  CompC_interface.cpp  CompC_interface.h  CompC_messages.cpp  CompC_messages.h
ZMQ_POC_01/Components/CompC/Lib/: mylibC.cpp  mylibC.h
ZMQ_POC_01/Components/CompD/: CMakeLists.txt  CompD.cpp  CompD.h  CompD.proto  CompD_interface.cpp  CompD_interface.h  CompD_messages.cpp  CompD_messages.h
ZMQ_POC_01/Components/CompD/Lib/: mylibD.cpp  mylibD.h
ZMQ_POC_01/Components/CompE/: CMakeLists.txt  CompE.cpp  CompE.h  CompE.proto  CompE_interface.cpp  CompE_interface.h  CompE_messages.cpp  CompE_messages.h
ZMQ_POC_01/Components/CompE/Lib/: mylibE.cpp  mylibE.h
ZMQ_POC_01/Components/CompF/: CMakeLists.txt  CompF.cpp  CompF.h  CompF.proto  CompF_interface.cpp  CompF_interface.h  CompF_messages.cpp  CompF_messages.h
ZMQ_POC_01/Components/CompF/Lib/: mylibF.cpp  mylibF.h
ZMQ_POC_01/PortGenerator/: CMakeLists.txt  portgenerator.cpp  portgenerator.h
